--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>javascript</title>
 </head>
 <body>
-    <h1>hell world</h1>
+    <h1>hello world</h1>
     <script src="app.js"></script>
 </body>
 </html>
